Updated Story Report

--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -62,7 +62,9 @@ Brandon was responsible for helping the Object Creator module and Sharing Framew
 Kyle was responsible for much of the design of the website. This process started with making a website mockup, and then designing a logo and color scheme. Lots of work was done with HTML and CSS, putting together the general layout of the page. The goal of the design was to be minimalist and out of the way, keeping as clean of a workspace as possible. He also created the login and registration page. \\
 
 
-Billy was responsible for designing, styling, and implementing the object browser panel. He wrote the code for displaying objects in a grid, adding objects individually and from an array, and for sizing/positioning objects. He also worked on CSS styling for the object panel. He implemented a Kinetic JS canvas so that the panel could display objects. He also implemented the "glow" or highlighting functionality which highlights objects and places highlighted objects in an array that the Visual Editor accesses through an accessor method. He worked on some of the data retrieval code (particularly for displaying objects designed in the Object Creation panel) as well as server setup/testing. He also contributed to some of the page layout/design.
+Billy was responsible for designing, styling, and implementing the object browser panel. He wrote the code for displaying objects in a grid, adding objects individually and from an array, and for sizing/positioning objects. He also worked on CSS styling for the object panel. He implemented a Kinetic JS canvas so that the panel could display objects. He also implemented the "glow" or highlighting functionality which highlights objects and places highlighted objects in an array that the Visual Editor accesses through an accessor method. He worked on some of the data retrieval code (particularly for displaying objects designed in the Object Creation panel) as well as server setup/testing. He also contributed to some of the page layout/design.\\
+
+DJ worked on small fixes to the program itself.  Rather than working on actual code, he had looked over other member's code on the main page during creation and adding small things such as the scroll ability on the visual editor canvas.
 
 
 %-------------------------------------------------------------------------------------------------------------
@@ -172,7 +174,7 @@ Edith was a challenge from start to finish.  I believe that the most voluminous 
 
 I also encountered many issues with retrieving objects(sprites) from the database and displaying them inside the object panel.  I will take some very useful database debugging and a much better knowledge of Ajax with me.  I have also learned a great deal about databases and php as well as javascript.  These three things together will be very useful in the future because of how prevalent they are in the field of web development and computer science. \\
 
-In order to complete the project I originally attempted to implement the use cases in my requirements document.  That quickly became outdated so I started to use the "adapter" design patter to try and piece together the other groups software.  If restarting on this project I would attempt to have a long session with other groups to go through what they planned on doing and how we could put it together.  A large problem was that many pieces could not be put together in the way that individual groups  had originally designed.  If I were to continue on this project I would add functionality to actually work.
+In order to complete the project I originally attempted to implement the use cases in my requirements document.  That quickly became outdated so I started to use the "adapter" design pattern to try and piece together the other groups software.  If restarting on this project I would attempt to have a long session with other groups to go through what they planned on doing and how we could put it together.  A large problem was that many pieces could not be put together in the way that individual groups  had originally designed.  If I were to continue on this project I would add functionality to actually work.
 
 \subsection{Nate Olderman}
 The biggest challenge I encountered during the development of this project is the dependency we had on the other groups. Because of this it was difficult at first to define clearly what we were responsible for. We tried to overcome this by talking to other groups as well as the professor in an attempt to define, as clearly as possible, everything that we needed to do. But in the end what really helped us to overcome this issue was the restructuring of our group (story creator) and the visual editor group. That helped to clearly define our groups' responsibilities and functions. In the future I think I would use this experience when creating the initial requirements specification which would help to solve this difficulty earlier in the process. \\
@@ -199,6 +201,22 @@ If I were to start this project over again, I would have waited a few years unti
 
 
 \subsection{Billy Rathje}
+
+\subsection{DJ Maguddayao}
+Edith was a struggle to get together.  We had to adapt to creating a system from scratch and self-taught ourselves HTML and Javascript along with learning how to use ajax calls for the database.  Thankfully, the internet had the resources we needed to get what we needed to do get done.
+
+From the beginning, we knew that our group had the most vague description for what we had to do (which had hurt us a bit when we had to change focus right before Integration 2).  Thankfully, we were able to adapt quickly to create a main HTML page for the project itself.  Sadly, during the crunch time (Integration 2) for that time, my hands were tied leaving myself unable to participate much.
+
+Communication is key for a project as large as this and communication was sparse until the very end of the project.  I'll touch more on this later.  
+
+The software engineering technique I mostly applied was agile programming.  Rather than actually working on code on my own, I worked with another person most of the time and overlooked how someone else wrote the code.  Best example was before Integration 3 where we met to figure how to get images from the Object creator group's array through our ajax call.  I myself barely touched code other than small fixes to the program.
+
+I didn't get much skills out of this outside of learning how to work with others on a big project.  If we had more individual time (i.e. not having to spend time on other classes), we would be able to make better time and communicate better.  I didn't do much of my own coding, so my skills with HTML, CSS and Javascript isn't exceptional.  I picked up a bit on how to code each, but I'm still clueless for the most part.
+
+Like some of my other teammate's view, if I were to redo this, I would have larger group discussions more often.  Even during our "work days" in class, groups stayed self-contained and didn't branch out until other members of other groups needed something.  If we had large group discussions, we'd have a more definite idea of what each group needed from other groups and less need to re-adapting unnecessary code.  Because of the lack of communication after Integration 1, we stayed clueless that Visual Editor was doing until it was a little late.  Also, personally I would allocate more time into this project than the few hours a week I did during this semester.  I don't feel I did much contributing compared to what the other members of the group have done
+
+
+
 
 %-------------------------------------------------------------------------------------------------------------
 % GLOSSARY AND REFERENCES 
